--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
     "bootstrap-vue": "^2.23.1",
+    "connect-history-api-fallback": "^2.0.0",
     "core-js": "^3.8.3",
     "express": "^4.18.2",
     "vue": "^3.2.13",
